--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,12 @@ a:hover {
 }
 
 body {
+  padding: 50px;
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  /* min-height: 100vh/; */
 }
 
 h1 {
